forge.laravel.com/aws_laravel_forge_security_group.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Security Group for Laravel Forge",
  "Parameters": {
    "VPC": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "VPC where the Security Group will belong"
    },
    "Name": {
      "Type": "String",
      "Description": "Name Tag of the Security Group"
    },
    "Description": {
      "Type": "String",
      "Description": "Description Tag of the Security Group"
    }
  },
  "Resources": {
    "ForgeSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": {
          "Ref": "Description"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "CidrIp": "159.203.150.232/32",
            "FromPort": "22",
            "ToPort": "22",
            "Description": "Forge SSH"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": "159.203.150.216/32",
            "FromPort": "22",
            "ToPort": "22",
            "Description": "Forge SSH"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": "45.55.124.124/32",
            "FromPort": "22",
            "ToPort": "22",
            "Description": "Forge SSH"
          }
        ]
      }
    }
  },
  "Outputs": {
    "SecurityGroupID": {
      "Description": "Security Group ID",
      "Value": {
        "Ref": "ForgeSG"
      }
    }
  }
}
